# reown-rust-no-std

./: Cargo.toml
blockchain_api/: Cargo.toml
blockchain_api/src/: lib.rs
relay_client/: Cargo.toml
relay_client/src/: error.rs  http.rs  lib.rs
sdk_core/: Cargo.toml
sdk_core/src/http/: mod.rs  reference.rs  reqwest.rs
