[package]
name = "relay_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["tokio-tungstenite/native-tls", "websocket"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
websocket = [
    "tokio",
    "tokio-tungstenite",
    "futures-channel",
    "tokio-stream",
    "tokio-util",
]

[dependencies]
relay_rpc = { path = "../relay_rpc" }
sdk_core = { path = "../sdk_core" }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
pin-project = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
] }
url = "2.3"
http = "1.0.0"

# WebSocket client dependencies.
tokio = { version = "1.22", features = [
    "rt",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
], optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
futures-channel = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }

[lints.clippy]
indexing_slicing = "deny"
