[package]
name = "sdk_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
http = { version = "1.2.0", default_features = false }
url = { version = "2.5.4", default_features = false }
reqwest = { version = "0.12.2", features = ["json"], optional = true }
serde = "1.0"
serde_json = "1.0"

[features]
default = ["reqwest"]
reference = []
reqwest = ["dep:reqwest"]
